// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`after-build hook > does not run after-build command when build fails 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  incremental_build[module_count=4]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "    build.compile_error",
]
`;

exports[`after-build hook > runs after-build command on successful build 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  incremental_build[module_count=4]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`deprecated and unknown config fields > warns about unknown config fields 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  incremental_build[module_count=4]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`deprecated and unknown config fields > warns about unsupported config fields 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  incremental_build[module_count=4]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`experimental features > reports error for unknown experimental feature key 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
]
`;

exports[`experimental features > reports parse error for invalid experimental features format 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
]
`;

exports[`warning configuration > overrides warning config with --warn-error flag 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app]",
  "    build.parse_file[module=Library, package=@rewatch-test/library]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "  incremental_build[module_count=4]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
]
`;
